# bookmark-sample

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  openapi.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docker/api/: Dockerfile
docker/db/: my.conf
docker/db/init/: 000-grant.sql  002-create-tables.sql  997-insert-test-user.sql  999-copy-to-test-database.sh
src/: error_handler.py  generate_openapi.py  main.py
src/controllers/: auth.py  bookmark.py  user.py  version.py
src/dao/: engine.py  session.py
src/dao/models/: base.py  bookmark.py  bookmark_tag.py  tag.py  user.py
src/dto/: auth.py  version.py
src/dto/user/: add.py  (+3 more)
src/entities/: bookmark.py  user.py
src/libs/: auth.py  authority.py  config.py  constraints.py  enum.py  log.py  openapi_tags.py  page.py  redis_client.py  util.py  version.py
src/repositories/: base.py  bookmark.py  error_handler.py  user.py
src/services/: auth.py  authority.py  authorize.py  base.py  token_blacklist.py
src/usecases/: base.py  blacklist.py  bookmark.py  user.py
tests/: base.py  conftest.py  dummy.py  factory.py  test_add_bookmark.py  test_delete_bookmark.py  test_get_bookmark.py  test_get_version.py  test_update_bookmark.py
tests/auth/: test_blacklist.py  test_login.py  test_me.py  test_refresh.py
tests/bookmark/: test_add_bookmark.py  test_delete_bookmark.py  test_get_bookmark.py  test_get_bookmark_list.py  test_update_bookmark.py
tests/user/: test_add_user.py  test_get_user.py  test_get_user_list.py  test_update_user.py
tests/version/: test_get_version.py
(+10 files in other folders)
