[project]
name = "bookmark"
version = "0.1.0"
description = "Bookmark sample"
readme = "README.md"
requires-python = "==3.13.7"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.34.*",
    "passlib[bcrypt]==1.7.*",
    "PyMySQL==1.1.*",
    "pyjwt==2.10.*",
    "python-dotenv==1.1.*",
    "python-multipart==0.0.*",
    "orjson==3.10.*",
    "sqlalchemy==2.0.*",
]

[dependency-groups]
dev = [
    "bandit==1.8.*",
    "httpx==0.28.*",
    "mypy==1.13.*",
    "pytest==8.3.*",
    "ruff==0.9.*",
    "taskipy==1.14.*",
    "types-passlib==1.7.*",
    "types-PyMySQL==1.1.*",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py313"
exclude = [
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true

[tool.mypy]
python_version = "3.13"
exclude = "^tests/"

[tool.taskipy.tasks]
test = "docker compose exec api pytest"
format = "ruff format ./"
check = "mypy . ; bandit --quiet --recursive src"
buildapp = "docker compose build api"
loginapp = "docker compose exec api bash"
openapi = "python -m src.generate_openapi > openapi.json"
